--- a/LoginPage.css
+++ b/LoginPage.css
@@ -1,5 +1,7 @@
+
 body{
-    background-color: rgb(55 48 163);
+    background-image: url('Images/Programminghero-ezgif.com-webp-to-jpg-converter.jpg');
+    /* background-color: whitesmoke; */
     /* border: 1px solid yellow; */
     padding: 60px;
     display: flex;
@@ -11,7 +13,7 @@ body{
     /* border: 1px solid yellow; */
     width: 70%;
     height: 800px;
-    background-color: rgb(30 58 138);
+    background-color: black;
     border-radius: 20px;
     box-shadow: 50px 25px 50px -12px rgb(0 0 0 / 0.50);
 }
@@ -47,6 +49,15 @@ body{
     border: none;
     font-size: large;
 }
+.PLogo-PName{
+    display: flex;
+    align-items: center;
+}
+.PLogo-PName img{
+    height: 50px;
+    width: 50px;
+    padding-right: 15px;
+}
 
 
 
@@ -54,21 +65,23 @@ body{
 
 /* Login part styles */
 
-
+.DisplayHidden {
+    display: none;
+}
 .LoginPart{
     /* border: 1px solid red; */
     width: 30%;
     margin-left: 50px;
     padding-top: 30px;
     border-radius: 15px;
-    border-right: 1px solid cornflowerblue ;
-    border-left: 1px solid cornflowerblue;
+    border-right: 1px solid lightgray ;
+    border-left: 1px solid lightgray;
 }
 .SignInLogo img{
-    height: 180px;
-    width: 250px;
+    height: 100px;
+    width: 100px;
 }
-.InputField{
+.InputField, .Reg-InputField{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -78,14 +91,14 @@ body{
     width: 70%;
     height: 30px;
     margin-bottom: 20px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     border-radius: 10px;
     font-size: 15px;
     padding-left: 15px;
-    background-color: transparent;
+    background-color: White;
 }
 .InputField input::placeholder{
-    color: white;
+    color: black;
 }
 .SignInLogo, .SignInButton{
     text-align: center;
@@ -101,14 +114,14 @@ body{
     background-color:cornflowerblue;
 }
 #UserName{
-    background-image: url('Images/UserNameFieldIcon.png');
+    background-image: url('Images/UserIcon.png');
     background-repeat: no-repeat;
     background-position: 10px center; /*Adjust as needed*/
     background-size: 23px 23px;
     padding-left: 40px;
 }
 #Password{
-    background-image: url('Images/PasswordFieldIcon.png');
+    background-image: url('Images/PasswordIcon.png');
     background-repeat: no-repeat;
     background-position: 10px center; /*Adjust as needed*/
     background-size: 18px 18px;
@@ -119,6 +132,7 @@ body{
     width: 100%;
     display: flex;
     justify-content: space-between;
+    margin-top: 50px;
     
 }
 .WelcomePart{
@@ -138,4 +152,72 @@ body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: justify;
     padding-right: 30px;
+}
+
+
+
+
+/* Registration form styles */
+
+.RegistrationForm{
+    /* border: 1px solid red; */
+    width: 25%;
+    background-color: black;
+    border-radius: 20px;
+    box-shadow: 0px 0px 5px 0px;
+    /* border: 2px solid cornflowerblue; */
+
+    border-right: 3px solid white ;
+    border-left: 3px solid white;
+
+    position: fixed;
+    top: 180px;
+    left: 48%;
+    z-index: 1000;
+}
+.PLogo img{
+    height: 100px;
+    width: 100px;
+}
+.Reg-InputField input{
+    display: block;
+    width: 80%;
+    height: 40px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    font-size: large;
+    padding-left: 15px;
+    background-color: white;
+    border: 1px solid black;
+}
+.PLogo, .Reg-Confirm{
+    text-align: center;
+    margin-bottom: 40px;
+}
+.Reg-InputField input::placeholder{
+    color: black;
+}
+.Reg-Confirm button{
+    margin-top: 40px;
+    height: 45px;
+    width: 200px;
+    font-size: larger;
+    border: none;
+    border-radius: 5px;
+    background-color: cornflowerblue;
+    margin-right: 20px;
+
+    margin-bottom: 50px;
+}
+#Reg-Cancel{
+    height: 45px;
+    width: 150px;
+    font-size: larger;
+    border: none;
+    border-radius: 5px;
+    background-color: cornflowerblue;
+
+    float: right;
+    margin-right: 20px;
+    margin-bottom: 20px;
 }
