--- a/LoginPage.css
+++ b/LoginPage.css
@@ -1,20 +1,18 @@
 
 body{
-    /* background-image: url('Images/Programminghero-ezgif.com-webp-to-jpg-converter.jpg'); */
-    background-color: whitesmoke;
-    /* border: 1px solid red; */
-    padding: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;  
+   background-color: skyblue;
+   margin: 0;
 }
 .LoginDiv{
-    /* border: 1px solid red; */
     width: 70%;
-    height: 800px;
-    background-color: rgb(0, 0, 0);
+    height: 80vh;
+    background-color: black;
     border-radius: 20px;
-    box-shadow: 50px 25px 50px -12px rgb(0 0 0 / 0.50);
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); /* Centers the div */
 }
 .LoginDiv nav{
     display: flex;
@@ -23,7 +21,7 @@ body{
     padding: 30px 50px;
     /* border: 1px solid red; */
 }
-.LoginDiv nav ul #MenuOptions{
+#MenuOptions{
     display: flex;
     column-gap: 40px;
       /* border: 1px solid red; */
@@ -82,7 +80,7 @@ body{
 }
 .LoginPart{
     /* border: 1px solid red; */
-    width: 30%;
+    width: 25%;
     margin-left: 50px;
     padding-top: 30px;
     border-radius: 15px;
@@ -185,17 +183,15 @@ body{
 
 .RegistrationForm{
     /* border: 1px solid red; */
-    width: 25%;
+    width: 30%;
     background-color: black;
     border-radius: 20px;
-    box-shadow: 0px 0px 5px 0px;
-    /* border: 2px solid cornflowerblue; */
 
     border-right: 3px solid white ;
     border-left: 3px solid white;
 
     position: fixed;
-    top: 180px;
+    top: 150px;
     left: 48%;
     z-index: 1000;
 }
@@ -223,19 +219,17 @@ body{
 }
 .Reg-Confirm button{
     margin-top: 40px;
-    height: 45px;
-    width: 200px;
+    height: 40px;
+    width: 180px;
     font-size: larger;
     border: none;
     border-radius: 5px;
-   background-color: skyblue;
-    margin-right: 20px;
-
-    margin-bottom: 50px;
+    background-color: skyblue;
+    margin-bottom: 20px;
 }
 #Reg-Cancel{
-    height: 45px;
-    width: 150px;
+    height: 35px;
+    width: 120px;
     font-size: larger;
     border: none;
     border-radius: 5px;
@@ -261,20 +255,17 @@ body{
 
 
 @media screen and (max-width: 576px){
-    body{
-        padding: 0px;   
-    }
+   
     /* Navigation bar */
     .LoginDiv{
         width: 100%;
-        box-shadow: 0px 0px 0px 0px;
-        padding-bottom: 20px;
+        height: 100vh;
+        border-radius: 0;
     }
     .LoginDiv nav{
-        /* flex-direction: column; */
         padding: 30px 20px;
     }
-    .LoginDiv nav ul #MenuOptions{
+    #MenuOptions{
         display: none;
 
         position: absolute;
@@ -288,7 +279,7 @@ body{
     .LoginDiv nav ul li button{
         border: 1px solid black;
     }
-    .LoginDiv nav ul #MenuOptions li{
+    #MenuOptions li{
         margin-bottom: 15px;
         font-size: 15px;
     }
@@ -296,7 +287,7 @@ body{
         color: black;
     }
     .LoginDiv nav h1{
-        font-size: 1em;
+        font-size: 1.2em;
     }
     .PLogo-PName img{
         height: 30px;
@@ -307,7 +298,6 @@ body{
     /* Login-Welcome part */
 
     .Login-Welcome{
-        /* border: 1px solid red; */
         flex-direction: column-reverse;
     }
     .WelcomePart{
@@ -325,7 +315,6 @@ body{
         width: 100%;
         margin-left: 0px;
         padding-top: 50px;
-        border-radius: 0px;
         border-right: none ;
         border-left: none;
     }
@@ -338,12 +327,11 @@ body{
     /* Registration form styles */
 
     .RegistrationForm{
-        width: 95%;
-        border-radius: 0px;
-        box-shadow: 0px 0px 0px 0px;
-    
+        width: 100%;
         border-right: 0;
         border-left: 0;
+        padding-top: 30px;
+        
     
         position: fixed;
         top: 290px;
@@ -363,25 +351,24 @@ body{
         display: none;
        }
 
-    body{
-        padding: 0px;   
-       }
-
     /* Navigation bar */
     .LoginDiv{
         width: 100%;
-        height: auto;
-        box-shadow: 0px 0px 0px 0px;
+        height: 100vh;
+        border-radius: 0;
+        border: 1px solid yellow;
     }
     .LoginDiv nav{
         flex-direction: column;
-        padding: 30px 0px;
+        padding: 10px 0px;
+        /* border: 1px solid yellow; */
     }
-    .LoginDiv nav ul #MenuOptions{
+    #MenuOptions{
         margin-right: 30px;
         width: 100%;
         column-gap: 50px;
         align-items: center;
+        /* border: 1px solid yellow; */
     }
     .LoginDiv #MenuOptions li{
         font-size: 15px;
@@ -403,10 +390,11 @@ body{
     .Login-Welcome{
         flex-direction: column-reverse;
         margin-top: 0px;
+        /* border: 1px solid yellow; */
     }
     .WelcomePart{
         width: 100%;
-        padding-top: 20px;
+        padding-top: 0;
     }
     .WelcomePart h1{
       font-size: 2.5em;
@@ -418,10 +406,11 @@ body{
     }
     .LoginPart{
         width: 50%;
-        margin: 80px auto;
+        margin: 40px auto;
         border-radius: 15px;
         border-right: 1px solid lightgray ;
         border-left: 1px solid lightgray;
+        /* border: 1px solid yellow; */
     }
     .SignInLogo img{
         height: 80px;
@@ -441,7 +430,7 @@ body{
         border-left: 3px solid white;
     
         position: fixed;
-        top: 330px;
+        top: 285px;
         left: 50%;
         transform: translateX(-50%);
         z-index: 1000;
@@ -457,32 +446,29 @@ body{
     #MenuBar{
         display: none;
        }
-       body{
-        padding: 0px;
-       }
 
     .LoginDiv{
     width: 100%;
     height: 100vh;
-    box-shadow: 0px 0px 0px -0px;
+    border-radius: 0;
 }
 .LoginDiv nav{
-    padding: 30px 20px;
+    padding: 20px 20px;
 }
-.LoginDiv nav ul #MenuOptions{
-    column-gap: 30px;
+#MenuOptions{
+    column-gap: 35px;
     align-items: center;
 }
 .LoginDiv nav ul li a{
-    font-size: 15px;
+    font-size: 17px;
 }
 .LoginDiv nav h1{ 
-    font-size: 1em;
+    font-size: 1.4em;
 }
 .LoginDiv nav ul li button{
     height: 30px;
     width: 100px;
-    font-size: 15px;
+    font-size: 17px;
 }
 .PLogo-PName img{
     height: 40px;
@@ -503,6 +489,7 @@ body{
 .Login-Welcome{ 
     flex-direction: column-reverse;  
     align-items: center;
+    margin-top: 0;
 }
 .WelcomePart{
     width: 90%;
@@ -520,7 +507,7 @@ body{
 .RegistrationForm{  
     width: 50%;
     position: fixed;
-    top: 340px;
+    top: 310px;
     left: 50%;
     transform: translateX(-50%);
 }
@@ -546,7 +533,7 @@ body{
     font-size: 1.7em;
 }
 .Login-Welcome{
-    margin-top: 100px;
+    margin-top: 80px;
 }
 .WelcomePart{
     margin-right: 0px;
@@ -557,10 +544,11 @@ body{
 }
 .WelcomePart p{
     padding-right: 20px;
+    margin-top: -1em;
 }
 .RegistrationForm{  
-    margin-top: 50px;
-    width: 32%;
+    margin-top: 0;
+    width: 35%;
 } 
    
     
